parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr finins
Rule 5     instruccion -> declaracion_instr finins
Rule 6     instruccion -> asignacion_instr finins
Rule 7     instruccion -> if_instr
Rule 8     instruccion -> while_instr
Rule 9     instruccion -> break_instr finins
Rule 10    instruccion -> for_instr
Rule 11    instruccion -> switch_instr
Rule 12    instruccion -> main_instr
Rule 13    instruccion -> funcion_instr
Rule 14    instruccion -> llamada_instr finins
Rule 15    instruccion -> return_instr finins
Rule 16    instruccion -> continue_instr finins
Rule 17    instruccion -> declArr_instr finins
Rule 18    instruccion -> modArr_instr finins
Rule 19    finins -> PUNTOCOMA
Rule 20    finins -> <empty>
Rule 21    instruccion -> error PUNTOCOMA
Rule 22    imprimir_instr -> RPRINT PARA expresion PARC
Rule 23    declaracion_instr -> RVAR ID IGUAL expresion
Rule 24    declaracion_instr -> RVAR ID
Rule 25    declArr_instr -> tipo1
Rule 26    tipo1 -> tipo lista_Dim ID IGUAL RNEW tipo lista_expresiones
Rule 27    lista_Dim -> lista_Dim CORA CORC
Rule 28    lista_Dim -> CORA CORC
Rule 29    lista_expresiones -> lista_expresiones CORA expresion CORC
Rule 30    lista_expresiones -> CORA expresion CORC
Rule 31    modArr_instr -> ID lista_expresiones IGUAL expresion
Rule 32    asignacion_instr -> ID IGUAL expresion
Rule 33    asignacion_instr -> ID INC
Rule 34    asignacion_instr -> ID DEC
Rule 35    expresion -> ID lista_expresiones
Rule 36    tipo -> RINT
Rule 37    tipo -> RDOUBLE
Rule 38    tipo -> RSTRING
Rule 39    tipo -> RCHAR
Rule 40    tipo -> RBOOL
Rule 41    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 42    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
Rule 43    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
Rule 44    while_instr -> RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 45    for_instr -> RFOR PARA declaracion_instr PUNTOCOMA expresion PUNTOCOMA asignacion_instr PARC LLAVEA instrucciones LLAVEC
Rule 46    for_instr -> RFOR PARA asignacion_instr PUNTOCOMA expresion PUNTOCOMA asignacion_instr PARC LLAVEA instrucciones LLAVEC
Rule 47    break_instr -> RBREAK
Rule 48    switch_instr -> RSWITCH PARA expresion PARC LLAVEA cases LLAVEC
Rule 49    cases -> cases case
Rule 50    cases -> case
Rule 51    case -> RCASE expresion DOSPUNTOS instrucciones
Rule 52    case -> RDEFAULT DOSPUNTOS instrucciones
Rule 53    expresion -> expresion MAS expresion
Rule 54    expresion -> expresion MENOS expresion
Rule 55    expresion -> expresion POR expresion
Rule 56    expresion -> expresion DIV expresion
Rule 57    expresion -> expresion POT expresion
Rule 58    expresion -> expresion MOD expresion
Rule 59    expresion -> expresion MENORQUE expresion
Rule 60    expresion -> expresion MAYORQUE expresion
Rule 61    expresion -> expresion IGUALIGUAL expresion
Rule 62    expresion -> expresion DIFERENTE expresion
Rule 63    expresion -> expresion MENORIGUAL expresion
Rule 64    expresion -> expresion MAYORIGUAL expresion
Rule 65    expresion -> expresion AND expresion
Rule 66    expresion -> expresion OR expresion
Rule 67    expresion -> MENOS expresion
Rule 68    expresion -> NOT expresion
Rule 69    expresion -> PARA expresion PARC
Rule 70    expresion -> ID
Rule 71    expresion -> llamada_instr
Rule 72    expresion -> ENTERO
Rule 73    expresion -> DECIMAL
Rule 74    expresion -> CADENA
Rule 75    expresion -> CARACTER
Rule 76    expresion -> RNULL
Rule 77    expresion -> RTRUE
Rule 78    expresion -> RFALSE
Rule 79    expresion -> RREAD PARA PARC
Rule 80    expresion -> PARA tipo PARC expresion
Rule 81    main_instr -> RMAIN PARA PARC LLAVEA instrucciones LLAVEC
Rule 82    funcion_instr -> RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
Rule 83    funcion_instr -> RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
Rule 84    parametros -> parametros COMA parametro
Rule 85    parametros -> parametro
Rule 86    parametro -> tipo ID
Rule 87    llamada_instr -> ID PARA PARC
Rule 88    llamada_instr -> ID PARA parametros_llamada PARC
Rule 89    parametros_llamada -> parametros_llamada COMA parametro_llamada
Rule 90    parametros_llamada -> parametro_llamada
Rule 91    parametro_llamada -> expresion
Rule 92    return_instr -> RRETURN expresion
Rule 93    continue_instr -> RCONTINUE

Terminals, with rules where they appear

AND                  : 65
CADENA               : 74
CARACTER             : 75
COMA                 : 84 89
CORA                 : 27 28 29 30
CORC                 : 27 28 29 30
DEC                  : 34
DECIMAL              : 73
DIFERENTE            : 62
DIV                  : 56
DOSPUNTOS            : 51 52
ENTERO               : 72
ID                   : 23 24 26 31 32 33 34 35 70 82 83 86 87 88
IGUAL                : 23 26 31 32
IGUALIGUAL           : 61
INC                  : 33
LLAVEA               : 41 42 42 43 44 45 46 48 81 82 83
LLAVEC               : 41 42 42 43 44 45 46 48 81 82 83
MAS                  : 53
MAYORIGUAL           : 64
MAYORQUE             : 60
MENORIGUAL           : 63
MENORQUE             : 59
MENOS                : 54 67
MOD                  : 58
NOT                  : 68
OR                   : 66
PARA                 : 22 41 42 43 44 45 46 48 69 79 80 81 82 83 87 88
PARC                 : 22 41 42 43 44 45 46 48 69 79 80 81 82 83 87 88
POR                  : 55
POT                  : 57
PUNTOCOMA            : 19 21 45 45 46 46
RBOOL                : 40
RBREAK               : 47
RCASE                : 51
RCHAR                : 39
RCONTINUE            : 93
RDEFAULT             : 52
RDOUBLE              : 37
RELSE                : 42 43
RFALSE               : 78
RFOR                 : 45 46
RFUNC                : 82 83
RIF                  : 41 42 43
RINT                 : 36
RMAIN                : 81
RNEW                 : 26
RNULL                : 76
RPRINT               : 22
RREAD                : 79
RRETURN              : 92
RSTRING              : 38
RSWITCH              : 48
RTRUE                : 77
RVAR                 : 23 24
RWHILE               : 44
error                : 21

Nonterminals, with rules where they appear

asignacion_instr     : 6 45 46 46
break_instr          : 9
case                 : 49 50
cases                : 48 49
continue_instr       : 16
declArr_instr        : 17
declaracion_instr    : 5 45
expresion            : 22 23 29 30 31 32 41 42 43 44 45 46 48 51 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 68 69 80 91 92
finins               : 4 5 6 9 14 15 16 17 18
for_instr            : 10
funcion_instr        : 13
if_instr             : 7 43
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 41 42 42 43 44 45 46 51 52 81 82 83
lista_Dim            : 26 27
lista_expresiones    : 26 29 31 35
llamada_instr        : 14 71
main_instr           : 12
modArr_instr         : 18
parametro            : 84 85
parametro_llamada    : 89 90
parametros           : 82 84
parametros_llamada   : 88 89
return_instr         : 15
switch_instr         : 11
tipo                 : 26 26 80 86
tipo1                : 25
while_instr          : 8

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . asignacion_instr finins
    (7) instruccion -> . if_instr
    (8) instruccion -> . while_instr
    (9) instruccion -> . break_instr finins
    (10) instruccion -> . for_instr
    (11) instruccion -> . switch_instr
    (12) instruccion -> . main_instr
    (13) instruccion -> . funcion_instr
    (14) instruccion -> . llamada_instr finins
    (15) instruccion -> . return_instr finins
    (16) instruccion -> . continue_instr finins
    (17) instruccion -> . declArr_instr finins
    (18) instruccion -> . modArr_instr finins
    (21) instruccion -> . error PUNTOCOMA
    (22) imprimir_instr -> . RPRINT PARA expresion PARC
    (23) declaracion_instr -> . RVAR ID IGUAL expresion
    (24) declaracion_instr -> . RVAR ID
    (32) asignacion_instr -> . ID IGUAL expresion
    (33) asignacion_instr -> . ID INC
    (34) asignacion_instr -> . ID DEC
    (41) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (42) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (43) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (44) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (47) break_instr -> . RBREAK
    (45) for_instr -> . RFOR PARA declaracion_instr PUNTOCOMA expresion PUNTOCOMA asignacion_instr PARC LLAVEA instrucciones LLAVEC
    (46) for_instr -> . RFOR PARA asignacion_instr PUNTOCOMA expresion PUNTOCOMA asignacion_instr PARC LLAVEA instrucciones LLAVEC
    (48) switch_instr -> . RSWITCH PARA expresion PARC LLAVEA cases LLAVEC
    (81) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (82) funcion_instr -> . RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (83) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (87) llamada_instr -> . ID PARA PARC
    (88) llamada_instr -> . ID PARA parametros_llamada PARC
    (92) return_instr -> . RRETURN expresion
    (93) continue_instr -> . RCONTINUE
    (25) declArr_instr -> . tipo1
    (31) modArr_instr -> . ID lista_expresiones IGUAL expresion
    (26) tipo1 -> . tipo lista_Dim ID IGUAL RNEW tipo lista_expresiones
    (36) tipo -> . RINT
    (37) tipo -> . RDOUBLE
    (38) tipo -> . RSTRING
    (39) tipo -> . RCHAR
    (40) tipo -> . RBOOL

    error           shift and go to state 19
    RPRINT          shift and go to state 20
    RVAR            shift and go to state 21
    ID              shift and go to state 22
    RIF             shift and go to state 23
    RWHILE          shift and go to state 24
    RBREAK          shift and go to state 25
    RFOR            shift and go to state 26
    RSWITCH         shift and go to state 27
    RMAIN           shift and go to state 28
    RFUNC           shift and go to state 29
    RRETURN         shift and go to state 30
    RCONTINUE       shift and go to state 31
    RINT            shift and go to state 34
    RDOUBLE         shift and go to state 35
    RSTRING         shift and go to state 36
    RCHAR           shift and go to state 37
    RBOOL           shift and go to state 38

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    break_instr                    shift and go to state 9
    for_instr                      shift and go to state 10
    switch_instr                   shift and go to state 11
    main_instr                     shift and go to state 12
    funcion_instr                  shift and go to state 13
    llamada_instr                  shift and go to state 14
    return_instr                   shift and go to state 15
    continue_instr                 shift and go to state 16
    declArr_instr                  shift and go to state 17
    modArr_instr                   shift and go to state 18
    tipo1                          shift and go to state 32
    tipo                           shift and go to state 33

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr finins
    (5) instruccion -> . declaracion_instr finins
    (6) instruccion -> . asignacion_instr finins
    (7) instruccion -> . if_instr
    (8) instruccion -> . while_instr
    (9) instruccion -> . break_instr finins
    (10) instruccion -> . for_instr
    (11) instruccion -> . switch_instr
    (12) instruccion -> . main_instr
    (13) instruccion -> . funcion_instr
    (14) instruccion -> . llamada_instr finins
    (15) instruccion -> . return_instr finins
    (16) instruccion -> . continue_instr finins
    (17) instruccion -> . declArr_instr finins
    (18) instruccion -> . modArr_instr finins
    (21) instruccion -> . error PUNTOCOMA
    (22) imprimir_instr -> . RPRINT PARA expresion PARC
    (23) declaracion_instr -> . RVAR ID IGUAL expresion
    (24) declaracion_instr -> . RVAR ID
    (32) asignacion_instr -> . ID IGUAL expresion
    (33) asignacion_instr -> . ID INC
    (34) asignacion_instr -> . ID DEC
    (41) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (42) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (43) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (44) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (47) break_instr -> . RBREAK
    (45) for_instr -> . RFOR PARA declaracion_instr PUNTOCOMA expresion PUNTOCOMA asignacion_instr PARC LLAVEA instrucciones LLAVEC
    (46) for_instr -> . RFOR PARA asignacion_instr PUNTOCOMA expresion PUNTOCOMA asignacion_instr PARC LLAVEA instrucciones LLAVEC
    (48) switch_instr -> . RSWITCH PARA expresion PARC LLAVEA cases LLAVEC
    (81) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (82) funcion_instr -> . RFUNC ID PARA parametros PARC LLAVEA instrucciones LLAVEC
    (83) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (87) llamada_instr -> . ID PARA PARC
    (88) llamada_instr -> . ID PARA parametros_llamada PARC
    (92) return_instr -> . RRETURN expresion
    (93) continue_instr -> . RCONTINUE
    (25) declArr_instr -> . tipo1
    (31) modArr_instr -> . ID lista_expresiones IGUAL expresion
    (26) tipo1 -> . tipo lista_Dim ID IGUAL RNEW tipo lista_expresiones
    (36) tipo -> . RINT
    (37) tipo -> . RDOUBLE
    (38) tipo -> . RSTRING
    (39) tipo -> . RCHAR
    (40) tipo -> . RBOOL

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 19
    RPRINT          shift and go to state 20
    RVAR            shift and go to state 21
    ID              shift and go to state 22
    RIF             shift and go to state 23
    RWHILE          shift and go to state 24
    RBREAK          shift and go to state 25
    RFOR            shift and go to state 26
    RSWITCH         shift and go to state 27
    RMAIN           shift and go to state 28
    RFUNC           shift and go to state 29
    RRETURN         shift and go to state 30
    RCONTINUE       shift and go to state 31
    RINT            shift and go to state 34
    RDOUBLE         shift and go to state 35
    RSTRING         shift and go to state 36
    RCHAR           shift and go to state 37
    RBOOL           shift and go to state 38

    instruccion                    shift and go to state 39
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    break_instr                    shift and go to state 9
    for_instr                      shift and go to state 10
    switch_instr                   shift and go to state 11
    main_instr                     shift and go to state 12
    funcion_instr                  shift and go to state 13
    llamada_instr                  shift and go to state 14
    return_instr                   shift and go to state 15
    continue_instr                 shift and go to state 16
    declArr_instr                  shift and go to state 17
    modArr_instr                   shift and go to state 18
    tipo1                          shift and go to state 32
    tipo                           shift and go to state 33

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    RVAR            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RSWITCH         reduce using rule 3 (instrucciones -> instruccion .)
    RMAIN           reduce using rule 3 (instrucciones -> instruccion .)
    RFUNC           reduce using rule 3 (instrucciones -> instruccion .)
    RRETURN         reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    RINT            reduce using rule 3 (instrucciones -> instruccion .)
    RDOUBLE         reduce using rule 3 (instrucciones -> instruccion .)
    RSTRING         reduce using rule 3 (instrucciones -> instruccion .)
    RCHAR           reduce using rule 3 (instrucciones -> instruccion .)
    RBOOL           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)
    RCASE           reduce using rule 3 (instrucciones -> instruccion .)
    RDEFAULT        reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr . finins
    (19) finins -> . PUNTOCOMA
    (20) finins -> .

    PUNTOCOMA       shift and go to state 41
    error           reduce using rule 20 (finins -> .)
    RPRINT          reduce using rule 20 (finins -> .)
    RVAR            reduce using rule 20 (finins -> .)
    ID              reduce using rule 20 (finins -> .)
    RIF             reduce using rule 20 (finins -> .)
    RWHILE          reduce using rule 20 (finins -> .)
    RBREAK          reduce using rule 20 (finins -> .)
    RFOR            reduce using rule 20 (finins -> .)
    RSWITCH         reduce using rule 20 (finins -> .)
    RMAIN           reduce using rule 20 (finins -> .)
    RFUNC           reduce using rule 20 (finins -> .)
    RRETURN         reduce using rule 20 (finins -> .)
    RCONTINUE       reduce using rule 20 (finins -> .)
    RINT            reduce using rule 20 (finins -> .)
    RDOUBLE         reduce using rule 20 (finins -> .)
    RSTRING         reduce using rule 20 (finins -> .)
    RCHAR           reduce using rule 20 (finins -> .)
    RBOOL           reduce using rule 20 (finins -> .)
    $end            reduce using rule 20 (finins -> .)
    LLAVEC          reduce using rule 20 (finins -> .)
    RCASE           reduce using rule 20 (finins -> .)
    RDEFAULT        reduce using rule 20 (finins -> .)

    finins                         shift and go to state 40

state 5

    (5) instruccion -> declaracion_instr . finins
    (19) finins -> . PUNTOCOMA
    (20) finins -> .

    PUNTOCOMA       shift and go to state 41
    error           reduce using rule 20 (finins -> .)
    RPRINT          reduce using rule 20 (finins -> .)
    RVAR            reduce using rule 20 (finins -> .)
    ID              reduce using rule 20 (finins -> .)
    RIF             reduce using rule 20 (finins -> .)
    RWHILE          reduce using rule 20 (finins -> .)
    RBREAK          reduce using rule 20 (finins -> .)
    RFOR            reduce using rule 20 (finins -> .)
    RSWITCH         reduce using rule 20 (finins -> .)
    RMAIN           reduce using rule 20 (finins -> .)
    RFUNC           reduce using rule 20 (finins -> .)
    RRETURN         reduce using rule 20 (finins -> .)
    RCONTINUE       reduce using rule 20 (finins -> .)
    RINT            reduce using rule 20 (finins -> .)
    RDOUBLE         reduce using rule 20 (finins -> .)
    RSTRING         reduce using rule 20 (finins -> .)
    RCHAR           reduce using rule 20 (finins -> .)
    RBOOL           reduce using rule 20 (finins -> .)
    $end            reduce using rule 20 (finins -> .)
    LLAVEC          reduce using rule 20 (finins -> .)
    RCASE           reduce using rule 20 (finins -> .)
    RDEFAULT        reduce using rule 20 (finins -> .)

    finins                         shift and go to state 42

state 6

    (6) instruccion -> asignacion_instr . finins
    (19) finins -> . PUNTOCOMA
    (20) finins -> .

    PUNTOCOMA       shift and go to state 41
    error           reduce using rule 20 (finins -> .)
    RPRINT          reduce using rule 20 (finins -> .)
    RVAR            reduce using rule 20 (finins -> .)
    ID              reduce using rule 20 (finins -> .)
    RIF             reduce using rule 20 (finins -> .)
    RWHILE          reduce using rule 20 (finins -> .)
    RBREAK          reduce using rule 20 (finins -> .)
    RFOR            reduce using rule 20 (finins -> .)
    RSWITCH         reduce using rule 20 (finins -> .)
    RMAIN           reduce using rule 20 (finins -> .)
    RFUNC           reduce using rule 20 (finins -> .)
    RRETURN         reduce using rule 20 (finins -> .)
    RCONTINUE       reduce using rule 20 (finins -> .)
    RINT            reduce using rule 20 (finins -> .)
    RDOUBLE         reduce using rule 20 (finins -> .)
    RSTRING         reduce using rule 20 (finins -> .)
    RCHAR           reduce using rule 20 (finins -> .)
    RBOOL           reduce using rule 20 (finins -> .)
    $end            reduce using rule 20 (finins -> .)
    LLAVEC          reduce using rule 20 (finins -> .)
    RCASE           reduce using rule 20 (finins -> .)
    RDEFAULT        reduce using rule 20 (finins -> .)

    finins                         shift and go to state 43

state 7

    (7) instruccion -> if_instr .

    error           reduce using rule 7 (instruccion -> if_instr .)
    RPRINT          reduce using rule 7 (instruccion -> if_instr .)
    RVAR            reduce using rule 7 (instruccion -> if_instr .)
    ID              reduce using rule 7 (instruccion -> if_instr .)
    RIF             reduce using rule 7 (instruccion -> if_instr .)
    RWHILE          reduce using rule 7 (instruccion -> if_instr .)
    RBREAK          reduce using rule 7 (instruccion -> if_instr .)
    RFOR            reduce using rule 7 (instruccion -> if_instr .)
    RSWITCH         reduce using rule 7 (instruccion -> if_instr .)
    RMAIN           reduce using rule 7 (instruccion -> if_instr .)
    RFUNC           reduce using rule 7 (instruccion -> if_instr .)
    RRETURN         reduce using rule 7 (instruccion -> if_instr .)
    RCONTINUE       reduce using rule 7 (instruccion -> if_instr .)
    RINT            reduce using rule 7 (instruccion -> if_instr .)
    RDOUBLE         reduce using rule 7 (instruccion -> if_instr .)
    RSTRING         reduce using rule 7 (instruccion -> if_instr .)
    RCHAR           reduce using rule 7 (instruccion -> if_instr .)
    RBOOL           reduce using rule 7 (instruccion -> if_instr .)
    $end            reduce using rule 7 (instruccion -> if_instr .)
    LLAVEC          reduce using rule 7 (instruccion -> if_instr .)
    RCASE           reduce using rule 7 (instruccion -> if_instr .)
    RDEFAULT        reduce using rule 7 (instruccion -> if_instr .)


state 8

    (8) instruccion -> while_instr .

    error           reduce using rule 8 (instruccion -> while_instr .)
    RPRINT          reduce using rule 8 (instruccion -> while_instr .)
    RVAR            reduce using rule 8 (instruccion -> while_instr .)
    ID              reduce using rule 8 (instruccion -> while_instr .)
    RIF             reduce using rule 8 (instruccion -> while_instr .)
    RWHILE          reduce using rule 8 (instruccion -> while_instr .)
    RBREAK          reduce using rule 8 (instruccion -> while_instr .)
    RFOR            reduce using rule 8 (instruccion -> while_instr .)
    RSWITCH         reduce using rule 8 (instruccion -> while_instr .)
    RMAIN           reduce using rule 8 (instruccion -> while_instr .)
    RFUNC           reduce using rule 8 (instruccion -> while_instr .)
    RRETURN         reduce using rule 8 (instruccion -> while_instr .)
    RCONTINUE       reduce using rule 8 (instruccion -> while_instr .)
    RINT            reduce using rule 8 (instruccion -> while_instr .)
    RDOUBLE         reduce using rule 8 (instruccion -> while_instr .)
    RSTRING         reduce using rule 8 (instruccion -> while_instr .)
    RCHAR           reduce using rule 8 (instruccion -> while_instr .)
    RBOOL           reduce using rule 8 (instruccion -> while_instr .)
    $end            reduce using rule 8 (instruccion -> while_instr .)
    LLAVEC          reduce using rule 8 (instruccion -> while_instr .)
    RCASE           reduce using rule 8 (instruccion -> while_instr .)
    RDEFAULT        reduce using rule 8 (instruccion -> while_instr .)


state 9

    (9) instruccion -> break_instr . finins
    (19) finins -> . PUNTOCOMA
    (20) finins -> .

    PUNTOCOMA       shift and go to state 41
    error           reduce using rule 20 (finins -> .)
    RPRINT          reduce using rule 20 (finins -> .)
    RVAR            reduce using rule 20 (finins -> .)
    ID              reduce using rule 20 (finins -> .)
    RIF             reduce using rule 20 (finins -> .)
    RWHILE          reduce using rule 20 (finins -> .)
    RBREAK          reduce using rule 20 (finins -> .)
    RFOR            reduce using rule 20 (finins -> .)
    RSWITCH         reduce using rule 20 (finins -> .)
    RMAIN           reduce using rule 20 (finins -> .)
    RFUNC           reduce using rule 20 (finins -> .)
    RRETURN         reduce using rule 20 (finins -> .)
    RCONTINUE       reduce using rule 20 (finins -> .)
    RINT            reduce using rule 20 (finins -> .)
    RDOUBLE         reduce using rule 20 (finins -> .)
    RSTRING         reduce using rule 20 (finins -> .)
    RCHAR           reduce using rule 20 (finins -> .)
    RBOOL           reduce using rule 20 (finins -> .)
    $end            reduce using rule 20 (finins -> .)
    LLAVEC          reduce using rule 20 (finins -> .)
    RCASE           reduce using rule 20 (finins -> .)
    RDEFAULT        reduce using rule 20 (finins -> .)

    finins                         shift and go to state 44

state 10

    (10) instruccion -> for_instr .

    error           reduce using rule 10 (instruccion -> for_instr .)
    RPRINT          reduce using rule 10 (instruccion -> for_instr .)
    RVAR            reduce using rule 10 (instruccion -> for_instr .)
    ID              reduce using rule 10 (instruccion -> for_instr .)
    RIF             reduce using rule 10 (instruccion -> for_instr .)
    RWHILE          reduce using rule 10 (instruccion -> for_instr .)
    RBREAK          reduce using rule 10 (instruccion -> for_instr .)
    RFOR            reduce using rule 10 (instruccion -> for_instr .)
    RSWITCH         reduce using rule 10 (instruccion -> for_instr .)
    RMAIN           reduce using rule 10 (instruccion -> for_instr .)
    RFUNC           reduce using rule 10 (instruccion -> for_instr .)
    RRETURN         reduce using rule 10 (instruccion -> for_instr .)
    RCONTINUE       reduce using rule 10 (instruccion -> for_instr .)
    RINT            reduce using rule 10 (instruccion -> for_instr .)
    RDOUBLE         reduce using rule 10 (instruccion -> for_instr .)
    RSTRING         reduce using rule 10 (instruccion -> for_instr .)
    RCHAR           reduce using rule 10 (instruccion -> for_instr .)
    RBOOL           reduce using rule 10 (instruccion -> for_instr .)
    $end            reduce using rule 10 (instruccion -> for_instr .)
    LLAVEC          reduce using rule 10 (instruccion -> for_instr .)
    RCASE           reduce using rule 10 (instruccion -> for_instr .)
    RDEFAULT        reduce using rule 10 (instruccion -> for_instr .)


state 11

    (11) instruccion -> switch_instr .

    error           reduce using rule 11 (instruccion -> switch_instr .)
    RPRINT          reduce using rule 11 (instruccion -> switch_instr .)
    RVAR            reduce using rule 11 (instruccion -> switch_instr .)
    ID              reduce using rule 11 (instruccion -> switch_instr .)
    RIF             reduce using rule 11 (instruccion -> switch_instr .)
    RWHILE          reduce using rule 11 (instruccion -> switch_instr .)
    RBREAK          reduce using rule 11 (instruccion -> switch_instr .)
    RFOR            reduce using rule 11 (instruccion -> switch_instr .)
    RSWITCH         reduce using rule 11 (instruccion -> switch_instr .)
    RMAIN           reduce using rule 11 (instruccion -> switch_instr .)
    RFUNC           reduce using rule 11 (instruccion -> switch_instr .)
    RRETURN         reduce using rule 11 (instruccion -> switch_instr .)
    RCONTINUE       reduce using rule 11 (instruccion -> switch_instr .)
    RINT            reduce using rule 11 (instruccion -> switch_instr .)
    RDOUBLE         reduce using rule 11 (instruccion -> switch_instr .)
    RSTRING         reduce using rule 11 (instruccion -> switch_instr .)
    RCHAR           reduce using rule 11 (instruccion -> switch_instr .)
    RBOOL           reduce using rule 11 (instruccion -> switch_instr .)
    $end            reduce using rule 11 (instruccion -> switch_instr .)
    LLAVEC          reduce using rule 11 (instruccion -> switch_instr .)
    RCASE           reduce using rule 11 (instruccion -> switch_instr .)
    RDEFAULT        reduce using rule 11 (instruccion -> switch_instr .)


state 12

    (12) instruccion -> main_instr .

    error           reduce using rule 12 (instruccion -> main_instr .)
    RPRINT          reduce using rule 12 (instruccion -> main_instr .)
    RVAR            reduce using rule 12 (instruccion -> main_instr .)
    ID              reduce using rule 12 (instruccion -> main_instr .)
    RIF             reduce using rule 12 (instruccion -> main_instr .)
    RWHILE          reduce using rule 12 (instruccion -> main_instr .)
    RBREAK          reduce using rule 12 (instruccion -> main_instr .)
    RFOR            reduce using rule 12 (instruccion -> main_instr .)
    RSWITCH         reduce using rule 12 (instruccion -> main_instr .)
    RMAIN           reduce using rule 12 (instruccion -> main_instr .)
    RFUNC           reduce using rule 12 (instruccion -> main_instr .)
    RRETURN         reduce using rule 12 (instruccion -> main_instr .)
    RCONTINUE       reduce using rule 12 (instruccion -> main_instr .)
    RINT            reduce using rule 12 (instruccion -> main_instr .)
    RDOUBLE         reduce using rule 12 (instruccion -> main_instr .)
    RSTRING         reduce using rule 12 (instruccion -> main_instr .)
    RCHAR           reduce using rule 12 (instruccion -> main_instr .)
    RBOOL           reduce using rule 12 (instruccion -> main_instr .)
    $end            reduce using rule 12 (instruccion -> main_instr .)
    LLAVEC          reduce using rule 12 (instruccion -> main_instr .)
    RCASE           reduce using rule 12 (instruccion -> main_instr .)
    RDEFAULT        reduce using rule 12 (instruccion -> main_instr .)


state 13

    (13) instruccion -> funcion_instr .

    error           reduce using rule 13 (instruccion -> funcion_instr .)
    RPRINT          reduce using rule 13 (instruccion -> funcion_instr .)
    RVAR            reduce using rule 13 (instruccion -> funcion_instr .)
    ID              reduce using rule 13 (instruccion -> funcion_instr .)
    RIF             reduce using rule 13 (instruccion -> funcion_instr .)
    RWHILE          reduce using rule 13 (instruccion -> funcion_instr .)
    RBREAK          reduce using rule 13 (instruccion -> funcion_instr .)
    RFOR            reduce using rule 13 (instruccion -> funcion_instr .)
    RSWITCH         reduce using rule 13 (instruccion -> funcion_instr .)
    RMAIN           reduce using rule 13 (instruccion -> funcion_instr .)
    RFUNC           reduce using rule 13 (instruccion -> funcion_instr .)
    RRETURN         reduce using rule 13 (instruccion -> funcion_instr .)
    RCONTINUE       reduce using rule 13 (instruccion -> funcion_instr .)
    RINT            reduce using rule 13 (instruccion -> funcion_instr .)
    RDOUBLE         reduce using rule 13 (instruccion -> funcion_instr .)
    RSTRING         reduce using rule 13 (instruccion -> funcion_instr .)
    RCHAR           reduce using rule 13 (instruccion -> funcion_instr .)
    RBOOL           reduce using rule 13 (instruccion -> funcion_instr .)
    $end            reduce using rule 13 (instruccion -> funcion_instr .)
    LLAVEC          reduce using rule 13 (instruccion -> funcion_instr .)
    RCASE           reduce using rule 13 (instruccion -> funcion_instr .)
    RDEFAULT        reduce using rule 13 (instruccion -> funcion_instr .)


state 14

    (14) instruccion -> llamada_instr . finins
    (19) finins -> . PUNTOCOMA
    (20) finins -> .
